test/Harper/Tests/Good/issue2_lamPar.har
f n = { 
  return (\x y => n + x + y);
};

appMul a b = (\n => f n (a * b));

main = appMul 7 17 42 5;