test/Harper/Tests/Bad/issue3_invEqTypes.har
f a b = {
  if a == b {
    return 42;
  }
  return 0;
};

main = f 17 ();